--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+    /* font-family: var(--font-instrument), system-ui, sans-serif; */
 }
 
 @media (prefers-color-scheme: dark) {
